[gd_scene load_steps=6 format=3 uid="uid://ctrswootky6q7"]

[ext_resource type="Script" path="res://assets/scenes/ui/customization/customizationWorld.gd" id="1_37aps"]
[ext_resource type="PackedScene" uid="uid://bg8aarggcxwa8" path="res://assets/entities/pawnEntity/pawnEntity.tscn" id="1_ch2jg"]
[ext_resource type="PackedScene" uid="uid://cmyxa8pfmhpcy" path="res://assets/components/inputComponent/inputComponent.tscn" id="3_ax8xa"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kfmsv"]

[sub_resource type="Environment" id="Environment_e7eu0"]
background_mode = 1
background_color = Color(1, 1, 1, 1)
reflected_light_source = 1
ssao_enabled = true
ssao_intensity = 1.0
ssao_power = 3.95852
ssao_detail = 5.0
fog_enabled = true
fog_light_color = Color(0.951441, 0.956499, 0.964452, 1)

[node name="customizationWorld" type="Node3D"]
script = ExtResource("1_37aps")

[node name="csgBox3d" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.494789, 0.0413312, -0.0143228)
use_collision = true
size = Vector3(5000, 0.294, 5000)
material = SubResource("StandardMaterial3D_kfmsv")

[node name="worldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_e7eu0")

[node name="pawnEntity" parent="." instance=ExtResource("1_ch2jg")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 1.18655, -0.45583)

[node name="spotLight3d" type="SpotLight3D" parent="."]
transform = Transform3D(0.992265, 0.071421, -0.101535, -7.34382e-09, 0.817919, 0.575334, 0.124138, -0.570883, 0.811592, -0.729325, 2.63393, 1.60217)
shadow_enabled = true
spot_range = 22.234
spot_angle = 39.25

[node name="horizOffset" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.428882)

[node name="vertOffset" type="Node3D" parent="horizOffset"]

[node name="customizationCam" type="Camera3D" parent="horizOffset/vertOffset"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.59371, 2.06761)

[node name="inputComponent" parent="." instance=ExtResource("3_ax8xa")]

[connection signal="onMouseMotion" from="inputComponent" to="." method="_on_input_component_on_mouse_motion"]
